添加锁优化的相关笔记